# FullingMotorModelDecoder.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  fulling_motor_name.yug  pyproject.toml
FullingMotorModelDecoder/: __init__.py  __main__.py
FullingMotorModelDecoder/parserBundle/compiled/TatSu/: fulling_motor_name.py
FullingMotorModelDecoder/parserBundle/compiled/antlr4/: fulling_motor_nameLexer.interp  fulling_motor_nameLexer.py  fulling_motor_nameLexer.tokens  fulling_motor_nameListener.py  fulling_motor_nameParser.py
FullingMotorModelDecoder/parserBundle/compiled/arpeggio/: fulling_motor_name.peg
FullingMotorModelDecoder/parserBundle/compiled/parglare/: fulling_motor_name.pg
FullingMotorModelDecoder/parserBundle/compiled/parsimonious/: fulling_motor_name.ppeg
FullingMotorModelDecoder/parserBundle/compiled/waxeye/: fulling_motor_name_parser.py
FullingMotorModelDecoder/parserBundle/schemas/capless/: fulling_motor_name.json
FullingMotorModelDecoder/parserBundle/wrappers/: fulling_motor_name.py
tests/: gearboxes.tsv  motors.tsv  tests.py
